--- a/app/templates/education/css/pages.css
+++ b/app/templates/education/css/pages.css
@@ -1882,7 +1882,7 @@ File: Pages
 .wrapper-page {
   margin: 5% auto;
   position: relative;
-  width: 420px;
+  width: 600px;
 }
 .wrapper-page .card-box {
   border: 1px solid rgba(54, 64, 74, 0.1);
@@ -2036,4 +2036,14 @@ div.hopscotch-bubble .hopscotch-bubble-arrow-container.down .hopscotch-bubble-ar
   border: 1px dashed rgba(152, 166, 173, 0.5) !important;
   background-color: rgba(152, 166, 173, 0.2) !important;
   padding: 20px;
+}
+.msg_text {
+  color: #000;
+}
+
+.msg_text a {
+  color: #7e57c2;
+}
+.msg_text a:hover {
+  text-decoration: underline;
 }
