--- a/app/templates/education/plugins/stfileicons/css/stfileicons.css
+++ b/app/templates/education/plugins/stfileicons/css/stfileicons.css
@@ -9,6 +9,7 @@ a[href$='.pptx'],
 a[href$='.xls'],
 a[href$='.xlsx']{
 	display: block;
+	padding: 10px 0;
     color: #000
 }
 
@@ -33,6 +34,7 @@ a[href$='.docx']:before {
 	display: block;
 	content: "\f1c2";
 	margin-right: 7px;
+	margin-top: -6px;
 	float: left
 }
 
@@ -44,6 +46,7 @@ a[href$='.PDF']:before {
 	display: block;
 	content: "\f1c1";
 	margin-right: 7px;
+	margin-top: -6px;
 	float: left
 }
 
@@ -53,6 +56,7 @@ a[href$='.zip']:before {
 	display: block;
 	content: "\f1c6";
 	margin-right: 7px;
+	margin-top: -6px;
 	float: left
 }
 
@@ -62,6 +66,7 @@ a[href$='.xls']:before {
 	display: block;
 	content: "\f1c3";
 	margin-right: 7px;
+	margin-top: -6px;
 	float: left
 }
 
@@ -71,6 +76,7 @@ a[href$='.ppt']:before {
 	display: block;
 	content: "\f1c4";
 	margin-right: 7px;
+	margin-top: -6px;
 	float: left
 }
 a[href$='.doc']:after,
